fixed inconsistency in alignment

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ td {
     display: flex;
     flex-direction: row ;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     border-radius: 50px;
 }
 
